--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="featured">
                     <p class="section-subtitle">What are my best works ?</p>
                     <h2 class="section-title mb-3">Featured Projects</h2>
-                    <p>Want to see some more projects?  <a href="#portfolio">Read more <i class="fa-solid fa-angles-right"></i></a> </p>
+                    <p>Want to see some more projects?  <a href="#portfolio">See more <i class="fa-solid fa-angles-right"></i></a> </p>
                     <div class="row">
                         <div class="portfolios-item col-md-4">
                             <img class="portfolios-image" src="assets/imgs/project1.jpg"/>
@@ -89,7 +89,7 @@
                             </p>
                             <div class="portfolio-card-overlay">
                                 <div class="portfolios-links">
-                                    <a href="https://nadeerabinoli.github.io/Advice-generator/" class="underline">View project</a>
+                                    <a href="https://nadeerabinoli.github.io/Advice-generator/" class="underline">Live Project</a>
                                     <a href="https://github.com/NadeeraBinoli/Advice-generator" class="underline">View Code</a>
                                 </div>
                             </div>
@@ -104,7 +104,7 @@
                             </p>
                             <div class="portfolio-card-overlay">
                                 <div class="portfolios-links">
-                                    <a href="https://nadeerabinoli.github.io/ShopWithUs/" class="underline">View project</a>
+                                    <a href="https://nadeerabinoli.github.io/ShopWithUs/" class="underline">Live project</a>
                                     <a href="https://github.com/NadeeraBinoli/ShopWithUs" class="underline">View Code</a>
                                 </div>
                             </div>
@@ -119,7 +119,7 @@
                             </p>
                             <div class="portfolio-card-overlay">
                                 <div class="portfolios-links">
-                                    <a href="https://nadeerabinoli.github.io/personal-blog/" class="underline">View project</a>
+                                    <a href="https://nadeerabinoli.github.io/personal-blog/" class="underline">Live project</a>
                                     <a href="https://github.com/NadeeraBinoli/personal-blog" class="underline">View Code</a>
                                 </div>
                             </div>
@@ -259,7 +259,7 @@
                     </p>
                     <div class="portfolio-card-overlay">
                         <div class="portfolios-links">
-                            <a href="https://nadeerabinoli.github.io/Advice-generator/" class="underline">View project</a>
+                            <a href="https://nadeerabinoli.github.io/Advice-generator/" class="underline">Live project</a>
                             <a href="https://github.com/NadeeraBinoli/Advice-generator" class="underline">View Code</a>
                         </div>
                     </div>
@@ -273,7 +273,7 @@
                     </p>
                     <div class="portfolio-card-overlay">
                         <div class="portfolios-links">
-                            <a href="https://nadeerabinoli.github.io/order-summery/" class="underline">View project</a>
+                            <a href="https://nadeerabinoli.github.io/order-summery/" class="underline">Live project</a>
                             <a href="https://github.com/NadeeraBinoli/order-summery" class="underline">View Code</a>
                         </div>
                     </div>
@@ -288,7 +288,7 @@
                     </p>
                     <div class="portfolio-card-overlay">
                         <div class="portfolios-links">
-                            <a href="https://nadeerabinoli.github.io/personal-blog/" class="underline">View project</a>
+                            <a href="https://nadeerabinoli.github.io/personal-blog/" class="underline">Live project</a>
                             <a href="https://github.com/NadeeraBinoli/personal-blog" class="underline">View Code</a>
                         </div>
                     </div>
@@ -304,7 +304,7 @@
                     </p>
                     <div class="portfolio-card-overlay">
                         <div class="portfolios-links">
-                            <a href="https://nadeerabinoli.github.io/product-preview-card/" class="underline">View project</a>
+                            <a href="https://nadeerabinoli.github.io/product-preview-card/" class="underline">Live project</a>
                             <a href="https://github.com/NadeeraBinoli/product-preview-card" class="underline">View Code</a>
                         </div>
                     </div>
@@ -319,7 +319,7 @@
                     </p>
                     <div class="portfolio-card-overlay">
                         <div class="portfolios-links">
-                            <a href="https://nadeerabinoli.github.io/Aden-Waller/" class="underline">View project</a>
+                            <a href="https://nadeerabinoli.github.io/Aden-Waller/" class="underline">Live project</a>
                             <a href="https://github.com/NadeeraBinoli/Aden-Waller" class="underline">View Code</a>
                         </div>
                     </div>
@@ -334,7 +334,7 @@
                     </p>
                     <div class="portfolio-card-overlay">
                         <div class="portfolios-links">
-                            <a href="https://nadeerabinoli.github.io/ShopWithUs/" class="underline">View project</a>
+                            <a href="https://nadeerabinoli.github.io/ShopWithUs/" class="underline">Live project</a>
                             <a href="https://github.com/NadeeraBinoli/ShopWithUs" class="underline">View Code</a>
                         </div>
                     </div>
@@ -385,11 +385,11 @@
                 <div class="contact">
                     <h5 class="fs-h4 mb-15 mt-25 fc-primary">Say hello</h5>
                     <div class="cInfo">
-                            <a href="#" class="mb-5 display-inblock">
+                            <a href= "mailto:nadeerabinoli@gmail.com" class="mb-5 display-inblock">
                             <i class="fa-regular fa-envelope"></i>
                             nadeerabinoli@gmail.com
                             </a> <br>
-                            <a href="#" class="mb-5 display-inblock">
+                            <a href="tel:+94703635865" class="mb-5 display-inblock">
                             <i class="fa-solid fa-phone"></i>
                             +94 70 363 58 65 – Hotline 
                     </div>
@@ -397,19 +397,19 @@
                 <div class="contact">
                     <h5 class="fs-h4 mb-15 mt-25 fc-primary">Follow Me</h5> 
                     <div class="cInfo">
-                            <a href="#" class="display-inblock mr-10">
+                            <a href="https://web.facebook.com/nadeera.binoli" class="display-inblock mr-10">
                             <i class="fa-brands fa-facebook"></i>
                             Facebook
                             </a> 
-                            <a href="#" class="display-inblock mr-10">
+                            <a href="https://www.instagram.com/nadeera_binoli?igsh=dHJ2YWdpdHNqZmxl" class="display-inblock mr-10">
                             <i class="fa-brands fa-instagram"></i>
                             Instagram
                             </a> <br>
-                            <a href="#" class="display-inblock mr-10">
+                            <a href="https://www.linkedin.com/in/nadeera-binoli-44747a253/" class="display-inblock mr-10">
                             <i class="fa-brands fa-linkedin"></i>
                             linkedin
                             </a> 
-                            <a href="#" class="display-inblock mr-10">
+                            <a href="https://github.com/NadeeraBinoli" class="display-inblock mr-10">
                             <i class="fa-brands fa-github"></i>
                             Github
                             </a>
